[package]
name = "porttest"
version = "0.1.1"
edition = "2021"
description = "A simple web server to test if a port is open"
license = "MIT"
default-run = "porttest"

[dependencies]
axum = "0.7.7"
tokio = { version = "1.41.0", features = ["macros", "rt", "rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing-subscriber = "0.3.18"

[[bin]]
name = "porttest"
path = "src/main.rs"
test = false
bench = false
